--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>hola xd</h1>
     <p>algo largo</p>
     <a href="https://github.com/Crissancio">link de github</a>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fes.wikipedia.org%2Fwiki%2FOne_Piece&psig=AOvVaw0bnGOhmBab-qhLoRsm4ZaA&ust=1704508788109000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNCtxZycxYMDFQAAAAAdAAAAABAD"
+    <img src="/imagen1.jfif"
         alt="imagen random">
     <ul>
         <li>mat</li>
