--- a/semana2/miniProyecto/miniProyecto.html
+++ b/semana2/miniProyecto/miniProyecto.html
@@ -16,7 +16,7 @@
             --black: #000000;
             --purple: #6F2CFF;
             --light-purple: #EFE9F9;
-            --red-heart: ##A50954;
+            --red-heart: #A50954;
             --blue-heart: #ACD9B2;
             --sm: 14px;
             --md: 24px;
